--- a/Develop/index.html
+++ b/Develop/index.html
@@ -46,24 +46,26 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-
+    
     <div class="container-lg px-5">
 
-      <div id="9" class="row time-block future" data-value="9">
+      <div id="9" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-      <div id="10" class="row time-block future" data-value="10">
+
+      <div id="10" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-      <div id="11" class="row time-block future" data-value="11">
+
+      <div id="11" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -71,7 +73,7 @@
         </button>
       </div>
 
-      <div id="12" class="row time-block future" data-value="12">
+      <div id="12" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -79,7 +81,7 @@
         </button>
       </div>
 
-      <div id="13" class="row time-block future" data-value="13">
+      <div id="13" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -87,7 +89,7 @@
         </button>
       </div>
 
-      <div id="14" class="row time-block future" data-value="14">
+      <div id="14" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -95,7 +97,7 @@
         </button>
       </div>
 
-      <div id="15" class="row time-block future" data-value="15">
+      <div id="15" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -103,8 +105,16 @@
         </button>
       </div>
 
-      <div id="16" class="row time-block future" data-value="16">
+      <div id="16" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
+      </div>
+
+      <div id="17" class="row time-block future">
+        <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
